added null state for results

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -11,5 +11,6 @@ body {
 
 @import "components/page";
 @import "components/filters";
+@import "components/results";
 @import "components/stars";
 @import "components/facilities";
