--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -12,5 +12,7 @@ body {
 @import "components/page";
 @import "components/filters";
 @import "components/results";
+@import "components/result";
 @import "components/stars";
 @import "components/facilities";
+@import "components/sort-button";
