--- a/src/assets/scss/components/_page.scss
+++ b/src/assets/scss/components/_page.scss
@@ -15,11 +15,5 @@
     border-radius: 2px;
     padding: 15px;
     flex-grow: 1;
-
-    @include respond($wide-desktop) {
-
-        + .page__component {
-            margin-left: 15px;
-        }
-    }
+    margin-bottom: 15px;
 }
