--- a/src/assets/scss/components/_filters.scss
+++ b/src/assets/scss/components/_filters.scss
@@ -51,5 +51,10 @@
         text-align: center;
         width: calc(100% - 20px);
         margin-bottom: 15px;
+
+        @include respond($tablet) {
+
+            display: none;
+        } 
     }
 }
